- Fix handling of wxSET, wxCLEAR and wxINVERT in wxDC (Artur Wieczorek).
- Fix bug with multiple default buttons in a dialog (Artur Wieczorek).
- Improve tooltips wrapping after updating their text (Artur Wieczorek).
- Fix checking menu items before appending them to the menu.

wxOSX:

- Fix incorrect joystick detection in configure (Lauri Nurmi).


3.0.0: (released 2013-11-11)
----------------------------

All:

- Fix crash if wxCharBuffer fails to allocate the requested amount of memory.

wxGTK:

- Fix wxSpinButton default width under GTK+ 3 (David Hart).

wxMSW:

- Compilation fix for WXWIN_COMPATIBILITY_2_6=1 case (Tim Stahlhut).
- Fix behaviour of wxComboBox using ID=1000.


3.0-RC2: (released 2013-10-28)
------------------------------

All:

- wxTextFile::SaveFile() uses UTF-8 now.
- Add possibility to validate the input files against a schema to wxrc.
- Fix recently broken compilation with Intel compiler.
- Fix reading of files with Mac EOLs in wxTextFile.

All (GUI):

- Fix wxListEvent::GetData() in LLP64 builds.
- Fix special characters handling in wxSVGFileDC::DrawText() (Ludovic Aubert).

wxGTK:

- Fix DrawArc() when printing.

wxMSW:

- Optional better handling of SAFEARRAYs in wxAutomationObject (PB).


3.0-RC1: (released 2013-10-07)
------------------------------

All:

- Adjust dates invalid due to DST consistently under all platforms in wxDateTime.
- Allow using custom HTTP methods with wxHTTP (Kolya Kosenko).
- Add wxFileName::SetPermissions() (Catalin Raceanu).
- Add specific wxFSW_WARNING_OVERFLOW warning type (Rob Bresalier).
- Fix build with wxUSE_FFILE==0 (jroemmler).
- Add wxDEPRECATED_MSG() and use it in a few places.
- Return the old file descriptor/pointer from wx(F)File::Detach() (troelsk).
- _() and wxGetTranslation() are now thread-safe.

All (GUI):

- Fix crash in wxHTML on mal-formed <area> elements (LukasK).
- Set correct cursor when the mouse is over image map links in wxHTML (LukasK).